[project]
name = "learn-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
